Refactor #1